# docs/swagger.json
@@ -1879,13 +1879,19 @@
         "main.ChangePasswordPayload": {
             "type": "object",
             "required": [
-                "password"
+                "new_password",
+                "old_password"
             ],
             "properties": {
-                "password": {
+                "new_password": {
                     "type": "string",
                     "maxLength": 72,
-                    "minLength": 3
+                    "minLength": 8
+                },
+                "old_password": {
+                    "type": "string",
+                    "maxLength": 72,
+                    "minLength": 8
                 }
             }
         },
